--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ APP_ENV=dev
 LOG_LEVEL=INFO
 MYSQL_DSN=mysql+pymysql://admin:Aa123456@10.10.5.8:3306/mz_mfp?charset=utf8mb4
 EXTERNAL_SQLSERVER_DSN=mssql+pyodbc://xiaokuxia:4425999a@10.10.8.1:1433/TRASEN?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes
-# Oracle 数据源（如未使用可留空）
+# Oracle 数据源（已停用，如需恢复自行填写）
 EXTERNAL_ORACLE_DSN=
 SIGNATURE_SECRET=please-change
 SIGNATURE_ALGO=hmac_sha256
